tests/baselines/reference/parserErrorRecovery_ArgumentList4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArgumentLists/parserErrorRecovery_ArgumentList4.ts (4 errors) ====
    function foo() {
       bar(a,b
       ~~~
!!! error TS2304: Cannot find name 'bar'.
           ~
!!! error TS2304: Cannot find name 'a'.
             ~
!!! error TS2304: Cannot find name 'b'.
       return;
       ~~~~~~
!!! error TS1005: ',' expected.
    }